# adapter/infrastructure/driver/pedido/model.go
@@ -52,3 +52,16 @@ func (p *Pedido) ToDomain() domain.Pedido {
 		},
 	}
 }
+
+type PaymentCallback struct {
+	Id          int       `json:"id"`
+	LiveMode    bool      `json:"live_mode"`
+	Type        string    `json:"type"`
+	DateCreated time.Time `json:"date_created"`
+	UserId      int       `json:"user_id"`
+	ApiVersion  string    `json:"api_version"`
+	Action      string    `json:"action"`
+	Data        struct {
+		ID string `json:"id"`
+	} `json:"data"`
+}
